--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -76,7 +76,11 @@ jobs:
     # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
+    
+    - name: build project
+      run: dotnet build
 
+      
     # Execute all unit tests in the solution
     - name: Execute unit tests
       run: dotnet test
